[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/objects.png" type="Texture" id=2]
[ext_resource path="res://Textures/back4.png" type="Texture" id=3]

[node name="Player" type="KinematicBody2D"]
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0.955536, -52.7881, -43.9986, -21.1159, -27.9922, 30.6495, 1.45387, 30.6066, 29.0578, 30.6066, 43.5257, -21.1159 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 5
frame = 1

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -73.8294
margin_top = -80.0533
margin_right = 566.171
margin_bottom = 319.947
rect_scale = Vector2( 0.24, 0.05 )
texture_progress = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( -28.8915, -46.7182 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
vframes = 3
hframes = 5

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 36.5755, -47.6403 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
vframes = 3
hframes = 5

[node name="Sprite4" type="Sprite" parent="."]
visible = false
position = Vector2( 3.07356, -46.4109 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
vframes = 3
hframes = 5
